--- a/index.html
+++ b/index.html
@@ -122,7 +122,11 @@
             
         </div>
         <div class="logo">
-            <img src="Images/images.png" alt="">
+            <a
+            href="http://validator.w3.org/check/referer"> <img
+            src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+            alt="html validator"/></a>
+            
         </div>
     </footer>
 </body>
