--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             
         </div>
         <div class="logo">
-            <a href="http://validator.w3.org/check/referer" rel="nofollow" title="Validate as HTML5">
+            <a href="https://validator.w3.org/check/referer" rel="nofollow" title="Validate as HTML5">
           
             <img
             src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
