adding about me page

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     </header>
     <section class="info">
         <h1>
-            Sherif Zekry
+            Sherif Wagih Bolas Zekry
         </h1>
     </section>
-
     <section class="lists">
         <h2>List of tasks</h2>
         <ul>
