--- a/W1D2/index.html
+++ b/W1D2/index.html
@@ -89,14 +89,14 @@ My Moods:        </h2>
         </ul>
         
     </section>
-    <section class="validaesection">
+    <div class="validaesection">
         <a href="https://validator.w3.org/check/referer" rel="nofollow" title="Validate as HTML5">
       
         <img
         src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
         alt="html validator"/>
     </a>
-    </section>
+</div>
 </body>
 
 </html>
