adding about me page change and change fonts style and size

--- a/W1D2/index.html
+++ b/W1D2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="Css/style.css">
+    <link rel="stylesheet" href="Css/styleme.css">
     <title>
         Week 1 Assignment 2
     </title>
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1 class="skybluecolor georgiafamily">
+        <h1 class="skybluecolor georgiafamily centertext">
             About Sherif Zekry
         </h1>
         <p>
@@ -38,6 +38,9 @@
             </li>
             <li>
                 CS 472 - Web Application Programming
+                <span class="bigsize italicfont">
+                    (In Progress)
+                </span>
             </li>
 
         </ul>
