--- a/W1D2/index.html
+++ b/W1D2/index.html
@@ -99,7 +99,7 @@ My Moods:        </h2>
         src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
         alt="html validator"/>
 
-        <a href="http://jigsaw.w3.org/css-validator/check/referer" rel="nofollow" title="Validate as Css">
+        <a href="https://jigsaw.w3.org/css-validator/check/referer" rel="nofollow" title="Validate as Css">
       
             <img
             src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png"
