--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </a>
             </li>
             <li>
-                <a href="">
+                <a href="./W1D2/aboutme.html">
                     Lab02 - About Me
                 </a>
             </li>
