adding advanced styles to about me page

--- a/W1D2/aboutme.html
+++ b/W1D2/aboutme.html
@@ -19,7 +19,6 @@
                 passionate,
             </span>
             <span class="yellow boldtext">
-
                 angry</span>, and <span class="yellow boldtext">four-eyed</span>.
         </p>
         <hr />
@@ -50,12 +49,37 @@
             My Favorite Movies
         </h2>
         <p>
-            (I don't watch a lot of movies as well, however, here goes we go!)
+            (I don't watch a lot of movies as well, however, here we go!)
         </p>
-
         <ul>
             <li>
                 The Shawshank Redemption (<a target="_blank" href="https://www.imdb.com/title/tt0111161/" class="tomatored">IMDB</a>)
+                <ul class="movieinfolist">
+                    <li>
+                        <p>
+                            Director:
+                        </p>
+                        <span>
+                            Frank Darabont
+                        </span>
+                    </li>
+                    <li>
+                        <p>
+                            Writers:
+                        </p>
+                        <span>
+                            Stephen King, Frank Darabont
+                        </span>
+                    </li>
+                    <li>
+                        <p>
+                            Stars:
+                        </p>
+                        <span>
+                            Tim Robbins, Morgan Freeman, Bob Gunton
+                        </span>
+                    </li>
+                </ul>
             </li>
             <li>
                 12 Angry Men
