adding some fun to about me pge as per the lab

--- a/W1D2/aboutme.html
+++ b/W1D2/aboutme.html
@@ -51,10 +51,10 @@
         <p>
             (I don't watch a lot of movies as well, however, here we go!)
         </p>
-        <ul>
+        <ol>
             <li>
                 The Shawshank Redemption (<a target="_blank" href="https://www.imdb.com/title/tt0111161/" class="tomatored">IMDB</a>)
-                <ul class="movieinfolist">
+                <ol class="movieinfolist ">
                     <li>
                         <p>
                             Director:
@@ -79,7 +79,7 @@
                             Tim Robbins, Morgan Freeman, Bob Gunton
                         </span>
                     </li>
-                </ul>
+                </ol>
             </li>
             <li>
                 12 Angry Men
@@ -88,7 +88,7 @@
                 Fight Club
             </li>
 
-        </ul>
+        </ol>
     </section>
     <section class="moodsSection">
         <h2 class="skybluecolor">
