adding recipe page

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 </a>
             </li>
             <li>
-                <a href="">
-                    Lab03 - Recipe
+                <a href="./W1D2/index.html">
+                    Lab02 - Recipe
                 </a>
             </li>
             <li>
