changing to overcome errors

--- a/W1D2/index.html
+++ b/W1D2/index.html
@@ -14,9 +14,9 @@
             Graadma's Lemon Merinuge Pie
         </h1>
     </header>
-    <section>
+    <div>
 
-        <article>
+        <div>
             <img src="./Images/recipeImages/pie.jpg" alt="">
             <p>
                 lemon meringue pie
@@ -38,8 +38,8 @@
                 8 Servings
             </p>
             <hr>
-        </article>
-    </section>
+        </div>
+    </div>
 
     <section>
 
@@ -87,7 +87,7 @@
             DIRECTIONS
         </h3>
 
-        <article>
+        <div>
             <ol>
                 <li>
                     <span class="boldspan">
@@ -162,7 +162,7 @@
                 Granny's favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a
                 piece of cake pie!
             </p>
-        </article>
+        </div>
     </section>
     <section class="usercomments">
         <h3 class="defaulttitle">
