--- a/W1D2/index.html
+++ b/W1D2/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <link rel="stylesheet" href="Css/recipe.css">
+    <link rel="icon" href="./Images/recipeImages/pie_icon.gif" type="image/gif" sizes="16x16">
+
     <title>
         Week 1 Assignment 2
     </title>
@@ -11,13 +13,15 @@
 <body>
     <header>
         <h1 class="center  defaulttitle">
-            Graadma's Lemon Merinuge Pie
+            <span>
+                Grandma's Lemon Merinuge Pie
+            </span>
         </h1>
     </header>
     <div>
 
         <div>
-            <img src="./Images/recipeImages/pie.jpg" alt="">
+            <img src="http://mumstudents.org/cs472/2014-09/Homework/1/pie.jpg" alt="">
             <p>
                 lemon meringue pie
             </p>
@@ -44,19 +48,31 @@
     <section>
 
         <h3 class="defaulttitle">
-            Graadma's Lemon Merinuge Pie
+            <span>
+                Graadma's Lemon Merinuge Pie
+            </span>
         </h3>
         <ul>
             <li> 1 cup white sugar
             </li>
             <li>
-                2 tbsp all-purpose flour
+                2 <span class="tbsp" title="tablespoons">
+                    tbsp
+                </span>  all-purpose flour
             </li>
             <li>
-                3 tbsp cornstarch
+                3
+                <span class="tbsp" title="tablespoons">
+                    tbsp
+                   </span>
+                 cornstarch
             </li>
             <li>
-                1/4 tsp salt
+                1/4 
+                <span title="teaspoons">
+                    tsp
+                </span>  
+                salt
             </li>
             <li>
                 1 1/2 cups water
@@ -64,7 +80,12 @@
             <li> 2 lemons, juiced and zested
             </li>
             <li>
-                2 tbsp butter
+                2 
+                <span class="tbsp" title="tablespoons">
+                    tbsp
+                   </span>
+                
+                butter
             </li>
             <li>
                 4 egg yolks, beaten
@@ -76,7 +97,10 @@
                 4 egg whites
             </li>
             <li>
-                6 tbsp white sugar
+                6 
+               <span class="tbsp" title="tablespoons">
+                tbsp
+               </span>  white sugar
             </li>
         </ul>
         <hr>
@@ -160,7 +184,11 @@
             <p>
                 This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's
                 Granny's favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a
-                piece of cake pie!
+                piece of 
+                <span class="strikeout">
+                    cake
+                </span> 
+                 pie!
             </p>
         </div>
     </section>
@@ -211,12 +239,12 @@
             Links
         </h3>
         <p>
-            <a href="">
+            <a href="https://www.google.com/search?q=lemon+meringue+pie+recipe&start=10">
                 Search for other lemon meringue pie recipes
             </a>    
         </p>
         <p>
-            <a href="">
+            <a href="#">
                 Home
             </a>    
         </p>
@@ -239,7 +267,6 @@
             Copyright © 2012 Granny's Pies |<br>
             A Granny's Pies Production     |<br>
             All rights reserved            |<br>
-            
         </p>
 
     </footer>
