--- a/W1D3/index.htm
+++ b/W1D3/index.htm
@@ -95,7 +95,7 @@
 							TODD Gilchrist <br>
 							IGN Movies
 
-							
+
 						</p>
 					</div>
 				</div>
@@ -103,7 +103,7 @@
 					<div>
 						<img src="./images/critic.gif" alt="Critic">
 						<p>
-							Ed Gonzalez	 <br>
+							Ed Gonzalez <br>
 							Slant Magazine
 						</p>
 					</div>
@@ -158,7 +158,7 @@
 						<div>
 							<img src="./images/critic.gif" alt="Critic">
 							<p>
-								Name  <br>
+								Name <br>
 								PUBLICATION
 							</p>
 						</div>
@@ -190,9 +190,10 @@
 				<div class="author-review-one">
 					<div class="bubble-view">
 						<p>
-						
+
 							<img src="./images/rotten.gif" alt="Rotten">
-							<q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy charm of the
+							<q>The script feels like it was computer generated. This mechanical presentation lacks the
+								cheesy charm of the
 								three live action films.</q>
 						</p>
 					</div>
@@ -231,128 +232,77 @@
 			<div>
 				<img src="./images/overview.png" alt="general overview">
 			</div>
+
+			<dl>
+				<div>
+					<dt>STARRING</dt>
+					<dd>Patrick Stewart <br> Mako <br> Sarah Michelle Gellar <br> Kevin Smith</dd>
+				</div>
+				<div>
+					<dt>DIRECTOR</dt>
+					<dd>Kevin Munroe</dd>
+				</div>
+
+				<div>
+					<dt>RATING</dt>
+					<dd>PG</dd>
+				</div>
+
+				<div>
+					<dt>THEATRICAL RELEASE</dt>
+					<dd>Mar 23, 2007</dd>
+				</div>
+
+				<div>
+					<dt>MOVIE SYNOPSIS</dt>
+					<dd>After the defeat of their old arch nemesis, The Shredder, the Turtles have grown apart as a
+						family.</dd>
+				</div>
+				<div>
+					<dt>MPAA RATING</dt>
+					<dd>PG, for animated action violence, some scary cartoon images and mild language</dd>
+				</div>
+
+				<div>
+					<dt>RELEASE COMPANY</dt>
+					<dd>Warner Bros.</dd>
+				</div>
+
+				<div>
+					<dt>RUNTIME</dt>
+					<dd>90 mins</dd>
+				</div>
+
+				<div>
+					<dt>GENRE</dt>
+					<dd>Action/Adventure, Comedies, Childrens, Martial Arts, Superheroes, Ninjas, Animated Characters
+					</dd>
+				</div>
+				<div>
+					<dt>BOX OFFICE</dt>
+					<dd>$54,132,596</dd>
+				</div>
+				<div>
+					<dt>LINKS</dt>
+					<dd>
+						<ul>
+							<li><a href="http://www.ninjaturtles.com/">The Official TMNT Site</a></li>
+							<li><a href="http://www.rottentomatoes.com/m/teenage_mutant_ninja_turtles/">RT Review</a>
+							</li>
+							<li><a href="http://www.rottentomatoes.com/">RT Home</a></li>
+							<li><a href="http://mumstudents.org/cs472/">CS472</a></li>
+						</ul>
+					</dd>
+
+				</div>
+			</dl>
 		</div>
+		<footer>
+			<p>(1-10) of 88</p>
+		</footer>
 	</div>
 
-
-
-
-	<dl>
-		<dt>STARRING</dt>
-		<dd>Patrick Stewart <br> Mako <br> Sarah Michelle Gellar <br> Kevin Smith</dd>
-		<dt>DIRECTOR</dt>
-		<dd>Kevin Munroe</dd>
-
-		<dt>RATING</dt>
-		<dd>PG</dd>
-
-		<dt>THEATRICAL RELEASE</dt>
-		<dd>Mar 23, 2007</dd>
-
-		<dt>MOVIE SYNOPSIS</dt>
-		<dd>After the defeat of their old arch nemesis, The Shredder, the Turtles have grown apart as a family.</dd>
-
-		<dt>MPAA RATING</dt>
-		<dd>PG, for animated action violence, some scary cartoon images and mild language</dd>
-
-		<dt>RELEASE COMPANY</dt>
-		<dd>Warner Bros.</dd>
-
-		<dt>RUNTIME</dt>
-		<dd>90 mins</dd>
-
-		<dt>GENRE</dt>
-		<dd>Action/Adventure, Comedies, Childrens, Martial Arts, Superheroes, Ninjas, Animated Characters</dd>
-
-		<dt>BOX OFFICE</dt>
-		<dd>$54,132,596</dd>
-
-		<dt>LINKS</dt>
-		<dd>
-			<ul>
-				<li><a href="http://www.ninjaturtles.com/">The Official TMNT Site</a></li>
-				<li><a href="http://www.rottentomatoes.com/m/teenage_mutant_ninja_turtles/">RT Review</a></li>
-				<li><a href="http://www.rottentomatoes.com/">RT Home</a></li>
-				<li><a href="http://mumstudents.org/cs472/">CS472</a></li>
-			</ul>
-		</dd>
-	</dl>
-
-
-
-
-	<p>
-		<img src="./images/critic.gif" alt="Critic">
-		Peter Debruge <br>
-		Variety
-	</p>
-
-	<p>
-		<img src="./images/fresh.gif" alt="Fresh">
-		<q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of new ones.</q>
-	</p>
-	<p>
-	
-	</p>
-
-
-	<p>
-		<img src="./images/critic.gif" alt="Critic">
-		Joshua Tyler <br>
-		CinemaBlend.com
-	</p>
-
-	<p>
-		<img src="./images/critic.gif" alt="Critic">
-		NAME <br>
-		PUBLICATION
-	</p>
-
-
-	<p>
-		<img src="./images/critic.gif" alt="Critic">
-		Jeannette Catsoulis <br>
-		New York Times
-	</p>
-
-	<p>
-		<img src="./images/rotten.gif" alt="Rotten">
-		<q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the filmmakers went
-			along.</q>
-	</p>
-	<p>
-		<img src="./images/critic.gif" alt="Critic">
-		Ed Gonzalez <br>
-		Slant Magazine
-	</p>
-
-
-	<p>
-		<img src="./images/critic.gif" alt="Critic">
-		Mark Palermo <br>
-		Coast (Halifax, Nova Scotia)
-	</p>
-
-
-	<p>
-		<img src="./images/critic.gif" alt="Critic">
-		Steve Rhodes <br>
-		Internet Reviews
-	</p>
-
-	<p>
-		<img src="./images/rotten.gif" alt="Rotten">
-		<q>YOUR REVIEW HERE</q>
-	</p>
-	<p>
-		<img src="./images/critic.gif" alt="Critic">
-		NAME <br>
-		PUBLICATION
-	</p>
-
-	<p>(1-10) of 88</p>
-
-	<div>
+	<div class="validator-images">
 		<a href="http://validator.w3.org/check/referer">
 			<img src="./images/w3c-html.png" alt="Valid HTML5"></a> <br>
 		<a href="http://jigsaw.w3.org/css-validator/check/referer">
