adding movie review link to homepage

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 </a>
             </li>
             <li>
-                <a href="">
-                    Lab04 - Movie Review
+                <a href="./W1D3/index.html">
+                    Lab03 - Movie Review
                 </a>
             </li>
             <li>
