adding second assignment

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                 </a>
             </li>
             <li>
-                <a href="">
-                    Lab01 - HomePage
+                <a href="./W1D4/index.html">
+                    Lab0401 - Simple Form
                 </a>
             </li>
             <li>
-                <a href="">
-                    Lab01 - HomePage
+                <a href="./W1D4/formnav.html">
+                    Lab0402 - Form with nav bar bootstrap
                 </a>
             </li>
             <li>
