--- a/W1D4/index.html
+++ b/W1D4/index.html
@@ -16,10 +16,10 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-sm">
+            <div class="col-sm col-md-2">
             </div>
-            <div class="col-sm">
-                <form method="Post" action="demo_form.jsp">
+            <div class="col-sm-12 col-md-8">
+                <form method="Post">
                     <div class="form-group">
                       <label for="exampleInputEmail1">Email address</label>
                       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
@@ -32,17 +32,16 @@
                     </div>
                     <div class="form-group">
                         <label for="exampleInputURL">URL:</label>
-                        <input type="url" class="form-control" id="exampleInputURL" aria-describedby="emailHelp">
+                        <input required type="url" class="form-control" id="exampleInputURL" aria-describedby="emailHelp">
                       </div>
-
                     <div class="form-group form-check">
                       <input type="checkbox" class="form-check-input" id="exampleCheck1">
                       <label class="form-check-label" for="exampleCheck1">Check me out</label>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
-                  </form>                  
+                </form>                  
             </div>
-            <div class="col-sm">
+            <div class="col-md-2">
             </div>
         </div>
     </div>
