--- a/W1D6/index.html
+++ b/W1D6/index.html
@@ -49,9 +49,9 @@
 			<img src="./images/w3c-html.png" alt="Valid HTML5"></a> <br>
 		<a href="https://jigsaw.w3.org/css-validator/check/referer">
 			<img src="./images/w3c-css.png" alt="Valid CSS"></a>
-		<a href="http://mumstudents.org/jshint/referer.php">
+		<a href="https://sherifzekry93.github.io/W1D6/jshint/referer.php">
 			<!--	https://sherifzekry93.github.io/W1D5/-->
-			<img src="https://sherifzekry93.github.io/W1D6/jshint/jshint-small.png"
+			<img src="http://mumstudents.org/jshint/jshint-small.png"
 				alt="Valid JS">
 		</a>
 	</div>
